eks-terraform/security_groups.tf
resource "aws_security_group" "eks_nodes" {
  name        = "eks-nodes-sg"
  description = "Allow node to communicate with cluster"
  vpc_id      = aws_vpc.this.id

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = [aws_vpc.this.cidr_block]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
